Generate article list view build.gradle - thymeleaf 의존성 추가 java [dto]ArticleListViewResponse 생성 [controller]BlogViewController getArticle 메서드 생성 resource [template]articleList.html 생성

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    // 타임리프
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 }
 
 test {
