--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,17 @@ dependencies {
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     // 스프링 시큐리티를 테스트하기 위한 의존성 추가
     testImplementation 'org.springframework.security:spring-security-test'
+
+    // JWT
+    testAnnotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.projectlombok:lombok'
+    // 자바 JWT 라이브러리
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    // XML 문서와 Java 객체 간 매핑을 자동화
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
+    // @ConfigurationProperties() 오류 해결
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 }
 
 test {
